<?xml version="1.0" encoding="UTF-8"?>

<!--
  ~ Copyright 2014 Network New Technologies, Inc., and individual contributors
  ~ as indicated by the @author tags.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.networknt.light</groupId>
    <artifactId>light-parent</artifactId>
    <version>1.0.0.0.0-SNAPSHOT</version>

    <packaging>pom</packaging>
    <name>Light Parent POM</name>
    <description>Light CMS</description>

    <licenses>
        <license>
            <name>Apache License Version 2.0</name>
            <url>http://repository.jboss.org/licenses/apache-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git://networknt.com/home/steve/light.git</connection>
        <developerConnection>scm:git://networknt.com/home/steve/light.git</developerConnection>
        <url>https://networknt.com/home/steve/light</url>
    </scm>

    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <h2database.version>1.3.175</h2database.version>
        <easymock.version>3.2</easymock.version>        
        <junit.version>4.11</junit.version>        
        <jackson.version>2.5.0</jackson.version>
        <jboss.logging.version>3.1.4.GA</jboss.logging.version>
        <jboss.logging.processor.version>1.2.0.Final</jboss.logging.processor.version>
        <jboss.logmanager.version>1.5.2.Final</jboss.logmanager.version>
        <logback.version>1.1.2</logback.version>
        <xnio.version>3.3.0.Beta1</xnio.version>
        <undertow.version>1.1.0.Beta6</undertow.version>
        <hazelcast.version>3.3</hazelcast.version>
        <orientdb.version>2.0.3</orientdb.version>
        <orient.version>2.0.3</orient.version>
        <concurrentlinkedhashmap.version>1.4</concurrentlinkedhashmap.version>
        <jna.version>4.0.0</jna.version>
        <snappy.version>1.1.0.1</snappy.version>
        <jsontoken.version>1.2.1</jsontoken.version>
        <rule-engine.version>1.0.0.0.1</rule-engine.version>
        <rule-loader.version>1.0.0.0.1</rule-loader.version>
        <page-loader.version>1.0.0.0.1</page-loader.version>
        <form-loader.version>1.0.0.0.1</form-loader.version>
        <mail.version>1.5.0-b01</mail.version>
        <json-schema-validator.version>2.2.6</json-schema-validator.version>
        <httpclient.version>4.3.5</httpclient.version>
        <httpcore.version>4.3.2</httpcore.version>
        <maven.build.timestamp.format>yyyyMMdd-HHmm</maven.build.timestamp.format>
        <buildTimestamp>${maven.build.timestamp}</buildTimestamp>

        <!-- Surefire args -->
        <surefire.jpda.args/>
        <surefire.system.args>-da ${surefire.jpda.args}</surefire.system.args>

        <!-- Checkstyle configuration -->
        <linkXRef>false</linkXRef>
        <version.light.build.checkstyle-config>1.0.0.Final</version.light.build.checkstyle-config>

    </properties>

    <modules>
        <module>core</module>
        <module>rule</module>
        <!--<module>workflow</module>-->
        <module>server</module>
    </modules>

    <build>
        <extensions>
            <!-- managed to get it to work with mvn 3.2.2 only-->
            <!--extension>
              <groupId>co.leantechniques</groupId>
              <artifactId>maven-buildtime-extension</artifactId>
              <version>2.0</version>
            </extension-->
        </extensions>
        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
        <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
        <resources>
            <resource>
                <filtering>false</filtering>
                <directory>${basedir}/src/main/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <filtering>false</filtering>
                <directory>${basedir}/src/test/resources</directory>
                <includes>
                    <include>**/*</include>
                </includes>
            </testResource>
        </testResources>

        <plugins>
            <!--
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <executions>
                    <execution>
                        <id>enforce-java</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireJavaVersion>
                                    <version>1.7</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.networknt.light</groupId>
                <artifactId>rule-maven-plugin</artifactId>
                <version>${rule-loader.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <serverUrl>http://example:8080</serverUrl>
                    <serverUser>stevehu</serverUser>
                    <serverPass>123456</serverPass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>com.networknt.light</groupId>
                <artifactId>page-maven-plugin</artifactId>
                <version>${page-loader.version}</version>
                <configuration>
                    <encoding>UTF-8</encoding>
                    <serverUrl>http://example:8080</serverUrl>
                    <serverUser>stevehu</serverUser>
                    <serverPass>123456</serverPass>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>

                <!-- Checkstyle -->
                <!--
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${version.checkstyle.plugin}</version>
                    <configuration>
                        <configLocation>light-checkstyle/checkstyle.xml</configLocation>
                        <consoleOutput>true</consoleOutput>
                        <failsOnError>true</failsOnError>
                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        <useFile/>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>light.build</groupId>
                            <artifactId>light-checkstyle-config</artifactId>
                            <version>${version.light.build.checkstyle-config}</version>
                        </dependency>
                    </dependencies>
                    <executions>
                        <execution>
                            <id>check-style</id>
                            <phase>compile</phase>
                            <goals>
                                <goal>checkstyle</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                -->
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>1.2</version>
                    <executions>
                        <execution>
                            <phase>validate</phase>
                            <goals>
                                <goal>create</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <revisionOnScmFailure>${maven.build.timestamp}</revisionOnScmFailure>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>2.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.14</version>
                    <configuration>
                        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
                    </configuration>
                    <dependencies>
                        <dependency>
                            <groupId>org.apache.maven.surefire</groupId>
                            <artifactId>surefire-junit47</artifactId>
                            <version>2.14</version>
                        </dependency>
                    </dependencies>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <!-- Modules in this project -->

            <dependency>
                <groupId>com.networknt.light</groupId>
                <artifactId>core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt.light</groupId>
                <artifactId>rule</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.networknt.light</groupId>
                <artifactId>workflow</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.networknt.light</groupId>
                <artifactId>server</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- External Dependencies -->

            <dependency>
                <groupId>com.networknt.light</groupId>
                <artifactId>rule-engine</artifactId>
                <version>${rule-engine.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <dependency>
                <groupId>light.build</groupId>
                <artifactId>light-checkstyle-config</artifactId>
                <version>${version.light.build.checkstyle-config}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-core</artifactId>
                <version>${jackson.version}</version>
            </dependency>

            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>

            <dependency>
                <groupId>org.jboss.logging</groupId>
                <artifactId>jboss-logging</artifactId>
                <version>${jboss.logging.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.logging</groupId>
                <artifactId>jboss-logging-annotations</artifactId>
                <version>${jboss.logging.processor.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.logging</groupId>
                <artifactId>jboss-logging-processor</artifactId>
                <version>${jboss.logging.processor.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.logmanager</groupId>
                <artifactId>jboss-logmanager</artifactId>
                <version>${jboss.logmanager.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.xnio</groupId>
                <artifactId>xnio-api</artifactId>
                <version>${xnio.version}</version>
            </dependency>
            <dependency>
                <groupId>org.jboss.xnio</groupId>
                <artifactId>xnio-nio</artifactId>
                <version>${xnio.version}</version>
            </dependency>
            <dependency>
                <groupId>io.undertow</groupId>
                <artifactId>undertow-core</artifactId>
                <version>${undertow.version}</version>
            </dependency>

            <dependency>
                <groupId>com.hazelcast</groupId>
                <artifactId>hazelcast</artifactId>
                <version>${hazelcast.version}</version>
            </dependency>

            <dependency>
                <groupId>com.googlecode.concurrentlinkedhashmap</groupId>
                <artifactId>concurrentlinkedhashmap-lru</artifactId>
                <version>${concurrentlinkedhashmap.version}</version>
            </dependency>
            <dependency>
                <groupId>org.xerial.snappy</groupId>
                <artifactId>snappy-java</artifactId>
                <version>${snappy.version}</version>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna-platform</artifactId>
                <version>${jna.version}</version>
            </dependency>
            <dependency>
                <groupId>net.java.dev.jna</groupId>
                <artifactId>jna</artifactId>
                <version>${jna.version}</version>
            </dependency>
            <dependency>
                <groupId>com.orientechnologies</groupId>
                <artifactId>orientdb-nativeos</artifactId>
                <version>${orient.version}</version>
            </dependency>
            <dependency>
                <groupId>com.orientechnologies</groupId>
                <artifactId>orient-commons</artifactId>
                <version>${orient.version}</version>
            </dependency>
            <dependency>
                <groupId>com.orientechnologies</groupId>
                <artifactId>orientdb-core</artifactId>
                <version>${orientdb.version}</version>
            </dependency>
            <dependency>
                <groupId>com.orientechnologies</groupId>
                <artifactId>orientdb-graphdb</artifactId>
                <version>${orientdb.version}</version>
            </dependency>
            <dependency>
                <groupId>com.googlecode.jsontoken</groupId>
                <artifactId>jsontoken</artifactId>
                <version>${jsontoken.version}</version>
            </dependency>
            <dependency>
                <groupId>javax.mail</groupId>
                <artifactId>mail</artifactId>
                <version>${mail.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.fge</groupId>
                <artifactId>json-schema-validator</artifactId>
                <version>${json-schema-validator.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpclient</artifactId>
                <version>${httpclient.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.httpcomponents</groupId>
                <artifactId>httpcore</artifactId>
                <version>${httpcore.version}</version>
            </dependency>

            <dependency>
                <groupId>org.easymock</groupId>
                <artifactId>easymock</artifactId>
                <version>${easymock.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>com.h2database</groupId>
                <artifactId>h2</artifactId>
                <version>${h2database.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>



</project>

